[package]
name = "factor"
version = "0.0.1"
authors = ["cosmoplankton <cosmoplankton@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = { version = "0.3.21", features = ["executor", "thread-pool"] }
flume = "0.10.10"
dashmap = "5.3.4"
parking_lot = "0.12.1"
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"]}
async-trait = { version = "0.1.57" }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread" ] }

[features]
debug-log = []
